--- a/agent/index.html
+++ b/agent/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <title>AI Chat Agent</title>
+    <title>OmniPoly</title>
 
     <script>
       document.documentElement.classList.toggle(
@@ -21,7 +21,7 @@
     </script>
 
     <!-- Favicon support -->
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.svg" />
 
     <!-- Preload fonts if any -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
